test/isabelle/negative-tests/exponentiation-operator.p
module Exp-op {

  e = (1 ^ 2) ^ 3


}